Parameterized API path

--- a/config.template.ini
+++ b/config.template.ini
@@ -3,3 +3,4 @@ DEFAULT_TZ = America/New_York
 UserName = someone@somewhere.com
 Password = SoM3h@rdtoGuessP@ssw0rd
 PowerThreshold = 100
+VESYNCAPIPATH = ..\pyvesync\src
