--- a/config.template.ini
+++ b/config.template.ini
@@ -4,3 +4,10 @@ UserName = someone@somewhere.com
 Password = SoM3h@rdtoGuessP@ssw0rd
 PowerThreshold = 100
 VESYNCAPIPATH = ..\pyvesync\src
+aws_access_key_id = YOUR ACCES KEY
+aws_secret_access_key = YOUR SECRET KEY
+region_name = us-east-1
+PhoneNumber1 = +12223334444
+PhoneNumber2 = +12223334444
+StartMessage = plug has started. You will be notified upon completion.
+CompleteMessage = plug has finished. Go collect your clothes!
