Allows multiple SMS numbers to be specified in config, checks againsts 2 previous values of power

--- a/config.template.ini
+++ b/config.template.ini
@@ -7,7 +7,6 @@ VESYNCAPIPATH = ..\pyvesync\src
 aws_access_key_id = YOUR ACCES KEY
 aws_secret_access_key = YOUR SECRET KEY
 region_name = us-east-1
-PhoneNumber1 = +12223334444
-PhoneNumber2 = +12223334444
+PhoneNumber = +12223334444,+12223334444
 StartMessage = plug has started. You will be notified upon completion.
 CompleteMessage = plug has finished. Go collect your clothes!
