Separate out DB IP

--- a/config.template.ini
+++ b/config.template.ini
@@ -4,6 +4,7 @@ UserName = someone@somewhere.com
 Password = SoM3h@rdtoGuessP@ssw0rd
 PowerThreshold = 5
 VESYNCAPIPATH = ..\pyvesync\src
+InfluxDBIP = 127.0.0.1
 aws_access_key_id = YOUR ACCES KEY
 aws_secret_access_key = YOUR SECRET KEY
 region_name = us-east-1
