add of config template items

--- a/config.template.ini
+++ b/config.template.ini
@@ -10,3 +10,4 @@ aws_secret_access_key = YOUR SECRET KEY
 region_name = us-east-1
 PhoneNumber = +12223334444,+12223334444
 CompleteMessage = plug has finished. Go collect your clothes!
+OutletsToProcess = Washer,Dryer
